--- a/Day1/数组和函数.html
+++ b/Day1/数组和函数.html
@@ -156,8 +156,63 @@
 	sum(10,20,30,40,50,60)
 </script>
 
-<script>
+<script type="text/html">
+	function fn(num1,num2,func){
+		return func(num1,num2);
+	}
 
-	
+	// 加减乘除函数
+	function add(a,b){
+		return a+b;
+	}
+	function sub(a,b){
+		return a-b;
+	}
+	function mul(a,b){
+		return a*b;
+	}
+	function divide(a,b){
+		return a/b;
+	}
+	fn(10,20,add);
+	console.log(fn(10,20,add));
+</script>
+
+<script type="text/html">
+	//求fibonacci的第n个数
+	//1 1  2 3 5 8 13 21 ...
+	function f1(n){
+		if(n===1 || n===2) return 1;
+		return f1(n-1) + f1(n-2);
+	}
+	console.log(f1(7))
+</script>
+
+<script>
+	// n个数的累加
+	// 1+2+3+4
+		function getSum(n){
+			if(n===1) return 1;
+			return n+getSum(n-1);
+		}
+
+		console.log(getSum(50))
+
+		for (var i = 0; i < 10; i++) {
+			// console.log(i)
+		}
+		console.log(i)
+
+		f1();
+		console.log(c);//9
+		console.log(b);//9
+		cosnole.log(a);//报错
+		function f1(){
+			var a=b=c=9;
+
+			console.log(a);//9
+			console.log(b);//9
+			console.log(c);//9
+		}
 </script>
 </html>
